# marginalia

./: .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  KICKOFF.md  LICENSE  README.md  osv-scanner.toml  providers.example.toml  pyproject.toml  release-please-config.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-update-prs.yml  ci.yml  codeql.yml  labeler.yml  osv-scanner.yml  release-assets.yml  release-please.yml
backend/marginalia/: __init__.py  claude_auth.py  config.py  lms_bridge.py  models_admin.py  paths.py
backend/marginalia/api/: __init__.py  deps.py  jobs.py  main.py  paths.py  providers.py  run.py  schemas.py  sse.py
backend/marginalia/export/: __init__.py  service.py
backend/marginalia/export/templates/: note.md.j2
backend/marginalia/ingest/: __init__.py  pdf.py  scan.py
backend/marginalia/jobs/: __init__.py  runner.py  service.py  store.py
backend/marginalia/ocr/: __init__.py  agent_sdk.py  engine.py  openai_compat.py  prompts.py  registry.py
backend/marginalia/structure/: __init__.py  mapper.py  strategies.py
backend/tests/: test_api.py  test_config.py  test_export.py  test_ingest.py  test_jobs.py  test_lms_bridge.py  test_mapper.py  test_models_admin.py  test_openai_compat.py  test_paths.py  test_registry.py  test_skeleton.py  test_store.py  test_structure.py
docs/: ARCHITECTURE.md  CNAME  ROADMAP.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/research/: AUDIT_BACKEND.md  AUDIT_FRONTEND_ARCHITECTURE.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/scripts/: demo.mjs  responsive-shot.mjs  shot.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBanner.tsx  ErrorBoundary.tsx  MarkdownEditor.tsx  OnboardingModal.tsx  PanelError.tsx  ProviderPicker.tsx  Spinner.tsx  StepIndicator.tsx  SuggestionChips.tsx  ThemeToggle.tsx
frontend/src/lib/: motion.ts  reviewReducer.test.ts  reviewReducer.ts  sse.ts  useJobStream.ts
frontend/src/steps/: Export.tsx  Import.tsx  Review.tsx
scripts/: install.ps1  install.sh  run.ps1  run.sh  setup-github.sh
