[project]
name = "marginalia"
version = "0.1.0"
description = "Kindle Scribe handwritten notebooks -> Obsidian Markdown, with OCR and human review."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "jinja2>=3.1",
    "claude-agent-sdk>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/marginalia"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["marginalia"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables in argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.12"
files = ["backend/marginalia"]
ignore_missing_imports = true
