[project]
name = "marginalia"
version = "1.2.0"
description = "Kindle Scribe handwritten notebooks -> Obsidian Markdown, with OCR and human review."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "claude-agent-sdk>=0.2.110",
]

[project.scripts]
marginalia = "marginalia.api.run:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/marginalia"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["marginalia"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables in argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.12"
files = ["backend/marginalia"]
ignore_missing_imports = true
